整合 sessionAuth 中间件代码,目前还有问题啊
